Increase notification header height to stop cutting off text.

--- a/module/legacy/_context.scss
+++ b/module/legacy/_context.scss
@@ -1296,8 +1296,11 @@
   -webkit-mask-image: var(--zehn-icon-shop-cart) !important;
 }
 
-._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Install svg,
 ._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.PreLoad svg,
+._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Install svg {
+  -webkit-mask-image: var(--zehn-icon-install) !important;
+}
+
 ._2EstNjFIIZm_WUSKm5Wt7n .Z5iAXBkRFGnwpXsO8ANTl.Download svg {
   -webkit-mask-image: var(--zehn-icon-download) !important;
 }
