--- a/module/window/overlay/_notification.scss
+++ b/module/window/overlay/_notification.scss
@@ -168,7 +168,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
 }
 
 ._1KIwOtwkYQUtRoPyxlh3G- svg:has([d="M29 23V27H7V23H2V32H34V23H29Z"]) {
-  -webkit-mask-image: var(--zehn-icon-download) !important;
+  -webkit-mask-image: var(--zehn-icon-install) !important;
 }
 
 ._3-UEC03E5hBqzay99CxSfu svg {
@@ -272,7 +272,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   font-weight: var(--zehn-weight-normal) !important;
   font-size: var(--zehn-size-12) !important;
   color: var(--zehn-color-text1) !important;
-  line-height: var(--zehn-size-12) !important;
+  line-height: var(--zehn-size-16) !important;
   text-overflow: ellipsis !important;
   overflow: hidden !important;
   white-space: nowrap !important;
@@ -299,7 +299,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   color: var(--zehn-color-text3) !important;
   line-height: var(--zehn-size-12) !important;
   text-overflow: ellipsis !important;
-  overflow: hidden !important;
+  overflow: visible !important;
   white-space: wrap !important;
 }
 
@@ -328,6 +328,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
 ._7XKFnSNjW_tHfyxaezoD3,
 .w1Bf_xO8scHETzsfr2HtM {
   @include description-text;
+  line-height: var(--zehn-size-16) !important;
 }
 
 // DESCRIPTION
@@ -396,6 +397,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
 // TIMESTAMP IN NOTIFICATIONS MENU
 ._1N5mcKPHLaAfi4MA2HzjuQ {
   @include description-text;
+  line-height: var(--zehn-size-16) !important;
 }
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
